# XPubKaleidoscope

./: PACKAGE.md  README.md  pyproject.toml  requirements.txt  setup.cfg  xpub_converter.py
src/xpubkaleidoscope/: __init__.py  xpub_converter.py
src/xpubkaleidoscope/utils/: __init__.py
tests/: __init__.py  test_xpub_converter.py
