[metadata]
name = xpubkaleidoscope
version = 0.1.0
author = Valerio Vaccaro
author_email = your.email@example.com
description = A Python utility for converting Bitcoin Extended Public Keys between different formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/valerio-vaccaro/XPubKaleidoscope
project_urls =
    Bug Tracker = https://github.com/valerio-vaccaro/XPubKaleidoscope/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Security :: Cryptography

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    # Add your dependencies here

[options.packages.find]
where = src 